nice pretty upgrade to item show page

--- a/app/stylesheets/_clean_constants.scss
+++ b/app/stylesheets/_clean_constants.scss
@@ -14,3 +14,8 @@ $error-border-color:    #fbc2c4;
 
 $header-font: Delicious, Helvetica, Arial, Verdana, sans-serif;
 $body-font: "Droid Serif", Georgia, "Times New Roman", Times, serif;
+
+$object-img-size: 80px;
+$object-width: 100px;
+$object-padding: 6px;
+$nc-icon-size: 16px;
