--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -2,3 +2,4 @@
   = link_to item_path(item, :q => @query) do
     = image_tag item.thumbnail_url, :alt => item.description, :title => item.description
     = item.name
+    = nc_icon_for(item)
