--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -21,8 +21,8 @@
         in it, but not the word "background"
       %dt blue is:nc
       %dd returns any NC Mall item with the word "blue" in it
-      %dt blue -is:nc
-      %dd returns any non-NC item with the word "blue" in it
+      %dt collar -is:pb
+      %dd returns any item with the word "blue" in it that isn't from a paint brush
       %dt species:shoyru
       %dd returns any item a Shoyru can wear
       %dt type:hat
