fix typo in is:pb homepage note

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -22,7 +22,7 @@
       %dt blue is:nc
       %dd returns any NC Mall item with the word "blue" in it
       %dt collar -is:pb
-      %dd returns any item with the word "blue" in it that isn't from a paint brush
+      %dd returns any item with the word "collar" in it that isn't from a paint brush
       %dt species:shoyru
       %dd returns any item a Shoyru can wear
       %dt type:hat
