move from scss to sass

--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1,119 +1,116 @@
-/* line 4, ../../../app/stylesheets/screen.scss */
+/* line 4, ../../../app/stylesheets/screen.sass */
 body {
   text-align: center;
 }
 
-/* line 8, ../../../app/stylesheets/screen.scss */
+/* line 7, ../../../app/stylesheets/screen.sass */
 input[type=text] {
   font-size: 125%;
   width: 15em;
 }
 
-/* line 13, ../../../app/stylesheets/screen.scss */
+/* line 11, ../../../app/stylesheets/screen.sass */
 h1 {
   margin-bottom: 1em;
 }
-/* line 15, ../../../app/stylesheets/screen.scss */
+/* line 13, ../../../app/stylesheets/screen.sass */
 h1 img {
   height: 80px;
   margin-bottom: -0.5em;
   width: 80px;
 }
-/* line 21, ../../../app/stylesheets/screen.scss */
+/* line 17, ../../../app/stylesheets/screen.sass */
 h1 a {
   text-decoration: none;
 }
-/* line 24, ../../../app/stylesheets/screen.scss */
+/* line 19, ../../../app/stylesheets/screen.sass */
 h1 a span {
   text-decoration: underline;
 }
-/* line 28, ../../../app/stylesheets/screen.scss */
+/* line 21, ../../../app/stylesheets/screen.sass */
 h1 a:hover span {
   text-decoration: none;
 }
 
-/* line 34, ../../../app/stylesheets/screen.scss */
+/* line 24, ../../../app/stylesheets/screen.sass */
 #userbar-log-in {
   text-decoration: none;
 }
-/* line 37, ../../../app/stylesheets/screen.scss */
+/* line 26, ../../../app/stylesheets/screen.sass */
 #userbar-log-in img {
   margin-bottom: -4px;
-  margin-right: .25em;
+  margin-right: 0.25em;
 }
-/* line 44, ../../../app/stylesheets/screen.scss */
+/* line 30, ../../../app/stylesheets/screen.sass */
 #userbar-log-in span {
   text-decoration: underline;
 }
-/* line 48, ../../../app/stylesheets/screen.scss */
+/* line 32, ../../../app/stylesheets/screen.sass */
 #userbar-log-in:hover span {
   text-decoration: none;
 }
 
-/* line 1, ../../../app/stylesheets/items/_index.scss */
-form {
+/* line 8, ../../../app/stylesheets/items/_index.sass */
+body.items-index form {
   margin-bottom: 2em;
 }
-
-/* line 5, ../../../app/stylesheets/items/_index.scss */
-.object .nc-icon {
+/* line 11, ../../../app/stylesheets/items/_index.sass */
+body.items-index .object .nc-icon {
   height: 16px;
   position: absolute;
   right: 16px;
   top: 64px;
   width: 16px;
 }
-/* line 12, ../../../app/stylesheets/items/_index.scss */
-.object .nc-icon:hover {
+/* line 17, ../../../app/stylesheets/items/_index.sass */
+body.items-index .object .nc-icon:hover {
   opacity: 0.5;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
 }
-
-/* line 26, ../../../app/stylesheets/items/_index.scss */
-#search-help {
+/* line 20, ../../../app/stylesheets/items/_index.sass */
+body.items-index #search-help {
   float: left;
   width: 49%;
   padding-right: 1%;
 }
-/* line 21, ../../../app/stylesheets/items/_index.scss */
-#search-help h2 {
+/* line 4, ../../../app/stylesheets/items/_index.sass */
+body.items-index #search-help h2 {
   font-size: 125%;
 }
-/* line 30, ../../../app/stylesheets/items/_index.scss */
-#search-help dl {
+/* line 23, ../../../app/stylesheets/items/_index.sass */
+body.items-index #search-help dl {
   text-align: left;
 }
-/* line 34, ../../../app/stylesheets/items/_index.scss */
-#search-help dd {
+/* line 25, ../../../app/stylesheets/items/_index.sass */
+body.items-index #search-help dd {
   margin-bottom: 1em;
 }
-
-/* line 39, ../../../app/stylesheets/items/_index.scss */
-#species-search-links {
+/* line 28, ../../../app/stylesheets/items/_index.sass */
+body.items-index #species-search-links {
   float: left;
   width: 49%;
   padding-left: 1%;
 }
-/* line 21, ../../../app/stylesheets/items/_index.scss */
-#species-search-links h2 {
+/* line 4, ../../../app/stylesheets/items/_index.sass */
+body.items-index #species-search-links h2 {
   font-size: 125%;
 }
-/* line 44, ../../../app/stylesheets/items/_index.scss */
-#species-search-links img {
+/* line 31, ../../../app/stylesheets/items/_index.sass */
+body.items-index #species-search-links img {
   height: 80px;
   width: 80px;
 }
 
-/* line 2, ../../../app/stylesheets/items/_show.scss */
-body.show header {
+/* line 2, ../../../app/stylesheets/items/_show.sass */
+body.items-show header {
   border-bottom: 1px solid #006600;
   display: block;
   margin-bottom: 1em;
   padding: 1em 0;
 }
-/* line 8, ../../../app/stylesheets/items/_show.scss */
-body.show header div, body.show header img {
+/* line 7, ../../../app/stylesheets/items/_show.sass */
+body.items-show header div, body.items-show header img {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
   display: inline-block;
@@ -121,41 +118,41 @@ body.show header div, body.show header img {
   *display: inline;
   *vertical-align: auto;
 }
-/* line 12, ../../../app/stylesheets/items/_show.scss */
-body.show header div {
+/* line 9, ../../../app/stylesheets/items/_show.sass */
+body.items-show header div {
   text-align: left;
 }
-/* line 16, ../../../app/stylesheets/items/_show.scss */
-body.show header a {
+/* line 11, ../../../app/stylesheets/items/_show.sass */
+body.items-show header a {
   font-size: 75%;
   margin-left: 1em;
 }
-/* line 22, ../../../app/stylesheets/items/_show.scss */
-body.show #item-thumbnail {
+/* line 14, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-thumbnail {
   border: 1px solid #006600;
   height: 80px;
-  margin-right: .5em;
+  margin-right: 0.5em;
   width: 80px;
 }
-/* line 29, ../../../app/stylesheets/items/_show.scss */
-body.show #item-name {
+/* line 19, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-name {
   margin-bottom: 0;
 }
-/* line 34, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview div {
+/* line 22, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview div {
   float: left;
 }
-/* line 39, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-species {
+/* line 24, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-species {
   width: 400px;
 }
-/* line 42, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-species a, body.show #item-preview-species img {
+/* line 26, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-species a, body.items-show #item-preview-species img {
   height: 50px;
   width: 50px;
 }
-/* line 47, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-species a {
+/* line 29, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-species a {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
   display: inline-block;
@@ -163,49 +160,49 @@ body.show #item-preview-species a {
   *display: inline;
   *vertical-align: auto;
 }
-/* line 50, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-species a.current {
+/* line 31, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-species a.current {
   background: #eeffee;
   outline: 1px solid #006600;
 }
-/* line 55, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-species a.deactivated {
+/* line 34, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-species a.deactivated {
   opacity: 0.5;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   background: #fbe3e4;
 }
-/* line 60, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-species a.deactivated.current {
+/* line 39, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-species a.deactivated.current {
   outline-color: #fbc2c4;
 }
-/* line 67, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-error {
+/* line 41, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-error {
   display: none;
   padding: 20px 10px 0;
   width: 380px;
 }
-/* line 73, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-swf {
+/* line 45, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-swf {
   height: 300px;
   overflow: hidden;
   width: 300px;
 }
-/* line 79, ../../../app/stylesheets/items/_show.scss */
-body.show #item-zones {
+/* line 49, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-zones {
   font-family: "Droid Serif", Georgia, "Times New Roman", Times, serif;
   font-size: 85%;
 }
-/* line 85, ../../../app/stylesheets/items/_show.scss */
-body.show #item-zones p:first-child {
-  margin-bottom: .25em;
+/* line 53, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-zones p:first-child {
+  margin-bottom: 0.25em;
 }
-/* line 90, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-header {
+/* line 55, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-header {
   margin-top: 3em;
 }
-/* line 93, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-header h3, body.show #item-preview-header a {
+/* line 57, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-header h3, body.items-show #item-preview-header a {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
   display: inline-block;
@@ -213,13 +210,13 @@ body.show #item-preview-header h3, body.show #item-preview-header a {
   *display: inline;
   *vertical-align: auto;
 }
-/* line 97, ../../../app/stylesheets/items/_show.scss */
-body.show #item-preview-header a {
+/* line 59, ../../../app/stylesheets/items/_show.sass */
+body.items-show #item-preview-header a {
   font-size: 85%;
   margin: -1.5em 0 0 1em;
 }
-/* line 103, ../../../app/stylesheets/items/_show.scss */
-body.show .nc-icon {
+/* line 62, ../../../app/stylesheets/items/_show.sass */
+body.items-show .nc-icon {
   height: 16px;
   width: 16px;
 }
