--- a/public/stylesheets/compiled/print.css
+++ b/public/stylesheets/compiled/print.css
@@ -1,17 +1,19 @@
-/* line 7, ../../../app/stylesheets/print.scss */
-body.bp {
+/* line 29, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+body {
   line-height: 1.5;
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
   color: black;
   background: none;
   font-size: 10pt;
 }
+
 /* line 52, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp .container {
+.container {
   background: none;
 }
+
 /* line 54, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp hr {
+hr {
   background: #cccccc;
   color: #cccccc;
   width: 100%;
@@ -21,53 +23,62 @@ body.bp hr {
   border: none;
 }
 /* line 62, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp hr.space {
+hr.space {
   background: white;
   color: white;
 }
+
 /* line 65, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
+
 /* line 67, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp code {
+code {
   font-size: 0.9em;
   font-family: "andale mono", "lucida console", monospace;
 }
+
 /* line 72, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp a img {
+a img {
   border: none;
 }
 /* line 75, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp a:link, body.bp a:visited {
+a:link, a:visited {
   background: transparent;
   font-weight: 700;
   text-decoration: underline;
 }
+
 /* line 79, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp p img.top {
+p img.top {
   margin-top: 0;
 }
+
 /* line 81, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp blockquote {
+blockquote {
   margin: 1.5em;
   padding: 1em;
   font-style: italic;
   font-size: 0.9em;
 }
+
 /* line 86, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp .small {
+.small {
   font-size: 0.9em;
 }
+
 /* line 88, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp .large {
+.large {
   font-size: 1.1em;
 }
+
 /* line 90, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp .quiet {
+.quiet {
   color: #999999;
 }
+
 /* line 92, ../../../../../.rvm/gems/ruby-1.9.2-preview3@rails3/gems/compass-0.10.5/frameworks/blueprint/stylesheets/blueprint/_print.scss */
-body.bp .hide {
+.hide {
   display: none;
 }
